# physlit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE-DATA  README.md  SPRINT.md  pyproject.toml
analysis/: 02_fmv_1_agent2_review.md  02_fmv_1_findings.md  02_fmv_1_report.md  02_fmv_1_structural_audit_human_review.md  02_fmv_1_structural_audit_worksheet.md  02_fmv_2_agents_review.md  02_fmv_2_audit_worksheet.md  02_fmv_2_findings.md  02_fmv_2_report.md  02_fmv_audit_human_review.md  02_fmv_audit_report.md  02_fmv_audit_worksheet.md  02_fmv_findings.md  02_fmv_report.md  03_decay_agents_review.md  03_decay_audit_human_review.md  03_decay_audit_worksheet.md  03_decay_dryrun_findings.md  03_decay_findings.md  03_decay_report.md  README.md  dryrun_findings.md  stage4_structure_overclaim_audit_human_review.md  stage4_structure_overclaim_findings.md  v0_1_audit_human_review.md  v0_1_audit_results.md  v0_1_audit_worksheet.md  v0_1_findings.md  v0_1_report.md  v0_2_agent1_vs_human_audit.md  v0_2_agent2_review.md  v0_2_findings.md  v0_2_structural_audit_human_review.md  v0_2_structural_audit_worksheet.md  v0_3_agents_review.md  v0_3_audit_human_review.md  v0_3_audit_worksheet.md  v0_3_findings.md  v0_3_report.md
docs/: implementation-guide.md  paper_draft.zh.md  paper_en.md  product-spec.md  product-spec.zh.md  project-timeline.md  stage4_structure_arm_overclaim_plan.md  v0_1_runner_requirements.md  v0_2_plan.md
latex_cn/: .gitignore  README.md  build.sh  main.tex  references.bib
predictions/: 02_fmv_1_prereg.md  02_fmv_2_prereg.md  (+6 more)
(+1890 files in other folders)
