[project]
name = "physlit"
version = "0.0.1"
description = "Physics Literacy Probe — diagnostic for LLM physics reasoning via induction, formulation, and prediction across counterfactual frameworks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Dong Zhang" }]
dependencies = [
    "anthropic>=0.98.0",
    "click>=8.3.3",
    "google-genai>=1.74.0",
    "jinja2>=3.1.6",
    "openai>=2.34.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/physlit"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.13"
files = ["src/physlit", "tests", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
